Revert "feat: Team added, pics distortion fixed"
This reverts commit bed5dafcd794b52ab0e7447431d5277c3d946d8b.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1863,10 +1863,10 @@ input[type="radio"] + label:before {
     text-align: justify; }
   .feature .image {
     display: inline-block;
+    height: 100%;
     overflow: hidden;
     position: relative;
-    width: 50%;
-    height: auto; }
+    width: 50%; }
     .feature .image img {
       display: block;
       min-height: 100%;
